Add translations for AuthButton component Add Arabic and English translations for auth button texts and implement translation hooks

--- a/i18n/locales/ar/translation.json
+++ b/i18n/locales/ar/translation.json
@@ -29,6 +29,12 @@
       "signIn": "تسجيل الدخول",
       "successMessage": "تم إنشاء الحساب بنجاح!",
       "errorMessage": "فشل في إنشاء الحساب"
+    },
+    "button": {
+      "signInUp": "تسجيل دخول/إنشاء حساب",
+      "profile": "الملف الشخصي",
+      "settings": "الإعدادات",
+      "signOut": "تسجيل خروج"
     }
   }
 }
